--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.38",
-    "@babel/preset-env": "^7.0.0-beta.38",
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "@babel/core": "latest",
+    "@babel/preset-env": "latest",
+    "babel-core": "latest",
+    "babel-preset-env": "latest",
     "browser-sync": "latest",
     "gulp": "latest",
     "gulp-autoprefixer": "latest",
-    "gulp-babel": "^7.0.0",
+    "gulp-babel": "latest",
     "gulp-concat": "latest",
+    "gulp-imagemin": "latest",
     "gulp-load-plugins": "latest",
     "gulp-plumber": "latest",
     "gulp-pug": "latest",
     "gulp-rename": "latest",
     "gulp-sass": "latest",
-    "gulp-uglify-es": "^1.0.0"
+    "gulp-uglify-es": "latest"
   },
   "description": "",
   "dependencies": {}
